<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cardColor"
    tools:context=".ui.Activity.ActLogin">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottie"
        android:layout_width="@dimen/_230sdp"
        android:layout_height="@dimen/_220sdp"
        android:layout_gravity="center"
        android:layout_marginStart="2dp"
        app:layout_constraintBottom_toTopOf="@+id/cardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/write" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="true"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp"
        app:cardElevation="@dimen/_minus2sdp"
        app:cardUseCompatPadding="true"
        android:layout_marginBottom="@dimen/_minus25sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/tvLogin"
                style="@style/TextBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:elevation="@dimen/_5sdp"
                android:text="@string/login_with_your_email"
                android:textSize="@dimen/_15sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:src="@drawable/ic_mail_24"
                        app:tint="@color/textBlack" />

                    <View
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:background="@color/gray" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/prompt_email"
                        android:textColorHint="@color/textBlack"
                        app:boxCollapsedPaddingTop="@dimen/_2sdp"
                        app:endIconMode="clear_text"
                        app:endIconScaleType="center"
                        app:endIconTint="@color/textBlack"
                        app:helperTextEnabled="true"
                        app:hintAnimationEnabled="true"
                        app:hintTextAppearance="@style/TextHint"
                        app:hintTextColor="@color/textBlack">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etMail"
                            style="@style/TextNormal"
                            android:maxLines="1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:nextFocusDown="@id/etPassword"
                            android:background="@color/white"
                            android:inputType="textEmailAddress"
                            android:ems="15" />

                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>

            </androidx.cardview.widget.CardView>


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_5sdp"
                app:cardElevation="@dimen/_3sdp"
                app:cardUseCompatPadding="true"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvLogin">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="@dimen/_20sdp"
                        android:layout_height="@dimen/_20sdp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/_8sdp"
                        android:src="@drawable/ic_lock_24"
                        app:tint="@color/textBlack" />

                    <View
                        android:layout_width="@dimen/_1sdp"
                        android:layout_height="@dimen/_22sdp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:background="@color/gray" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/white"
                        android:hint="@string/prompt_password"
                        android:textColorHint="@color/textBlack"
                        app:boxCollapsedPaddingTop="@dimen/_2sdp"
                        app:hintAnimationEnabled="true"
                        app:hintTextAppearance="@style/TextHint"
                        app:hintTextColor="@color/textBlack"
                        app:passwordToggleEnabled="true"
                        app:passwordToggleTint="@color/textBlack">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/etPassword"
                            style="@style/TextNormal"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@color/white"
                            android:ems="15"
                            android:nextFocusDown="@id/cbRemeberMe"
                            android:maxLines="1"
                            android:inputType="textPassword" />

                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

            </androidx.cardview.widget.CardView>

            <CheckBox
                android:id="@+id/cbRemeberMe"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_5sdp"
                android:buttonTint="@color/textBlack"
                android:checked="false"
                android:nextFocusDown="@id/btnLogin"
                android:text="@string/remeber_me"
                android:textAppearance="@style/TextNormal"
                android:textColor="@color/textBlack" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_30sdp"
                android:paddingHorizontal="@dimen/_50sdp"
                android:text="@string/login"
                android:textAllCaps="true"
                android:textAppearance="@style/TextBold" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>